[account] merge collection and master addresses into one minter address column, update api docs
