# api/http/swagger.json
@@ -59,20 +59,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "filter FTs or NFTs by owner address",
+                        "description": "filter FT wallets or NFT items by owner address",
                         "name": "owner_address",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "filter NFT items by collection address",
-                        "name": "collection_address",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "filter FT wallets by minter address",
-                        "name": "master_address",
+                        "description": "filter FT wallets or NFT items by minter address",
+                        "name": "minter_address",
                         "in": "query"
                     },
                     {
@@ -93,6 +87,7 @@
                         "in": "query"
                     },
                     {
+                        "maximum": 10000,
                         "type": "integer",
                         "default": 3,
                         "description": "limit",
@@ -168,6 +163,7 @@
                         "in": "query"
                     },
                     {
+                        "maximum": 1000,
                         "type": "integer",
                         "default": 3,
                         "description": "limit",
@@ -314,6 +310,7 @@
                         "in": "query"
                     },
                     {
+                        "maximum": 10000,
                         "type": "integer",
                         "default": 3,
                         "description": "limit",
@@ -384,6 +381,7 @@
                         "in": "query"
                     },
                     {
+                        "maximum": 10000,
                         "type": "integer",
                         "default": 3,
                         "description": "limit",
@@ -424,12 +422,6 @@
                 "balance": {
                     "type": "string"
                 },
-                "collection_address": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
                 "content_description": {
                     "type": "string"
                 },
@@ -449,6 +441,7 @@
                     "type": "string"
                 },
                 "editor_address": {
+                    "description": "CollectionAddress *addr.Address `ch:\"type:String\" bun:\"type:bytea\" json:\"collection_address,omitempty\"`",
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -476,7 +469,6 @@
                     "type": "integer"
                 },
                 "master_address": {
-                    "description": "OwnerAddress  Address",
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -489,7 +481,7 @@
                     "$ref": "#/definitions/bunbig.Int"
                 },
                 "owner_address": {
-                    "description": "universal column for many contracts",
+                    "description": "common fields for FT and NFT",
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -554,9 +546,6 @@
                         "type": "integer"
                     }
                 },
-                "depth": {
-                    "type": "integer"
-                },
                 "get_method_hashes": {
                     "type": "array",
                     "items": {
@@ -575,9 +564,6 @@
                 "last_tx_lt": {
                     "type": "integer"
                 },
-                "latest": {
-                    "type": "boolean"
-                },
                 "state_data": {
                     "$ref": "#/definitions/core.AccountData"
                 },
@@ -591,12 +577,6 @@
                 "status": {
                     "description": "TODO: ch enum",
                     "type": "string"
-                },
-                "tick": {
-                    "type": "boolean"
-                },
-                "tock": {
-                    "type": "boolean"
                 }
             }
         },
@@ -673,6 +653,13 @@
                         "type": "integer"
                     }
                 },
+                "code_hash": {
+                    "description": "TODO: match by code hash",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "get_method_hashes": {
                     "type": "array",
                     "items": {
@@ -739,7 +726,7 @@
                     "type": "boolean"
                 },
                 "created_at": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "created_lt": {
                     "type": "integer"
@@ -819,6 +806,9 @@
         "core.MessagePayload": {
             "type": "object",
             "properties": {
+                "amount": {
+                    "$ref": "#/definitions/bunbig.Int"
+                },
                 "body_hash": {
                     "type": "array",
                     "items": {
@@ -826,7 +816,7 @@
                     }
                 },
                 "created_at": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "created_lt": {
                     "type": "integer"
@@ -844,6 +834,9 @@
                     }
                 },
                 "dst_contract": {
+                    "type": "string"
+                },
+                "error": {
                     "type": "string"
                 },
                 "hash": {
@@ -878,9 +871,6 @@
                 "account": {
                     "$ref": "#/definitions/core.AccountState"
                 },
-                "account_activated": {
-                    "type": "boolean"
-                },
                 "address": {
                     "type": "array",
                     "items": {
@@ -896,12 +886,8 @@
                 "block_workchain": {
                     "type": "integer"
                 },
-                "compute_success": {
-                    "description": "TODO: parse tx description",
-                    "type": "boolean"
-                },
                 "created_at": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "created_lt": {
                     "type": "integer"
@@ -914,9 +900,6 @@
                 },
                 "end_status": {
                     "type": "string"
-                },
-                "gas_fees": {
-                    "$ref": "#/definitions/bunbig.Int"
                 },
                 "hash": {
                     "type": "array",
@@ -935,9 +918,6 @@
                     "items": {
                         "type": "integer"
                     }
-                },
-                "msg_state_used": {
-                    "type": "boolean"
                 },
                 "orig_status": {
                     "type": "string"
@@ -971,27 +951,6 @@
                 },
                 "total_fees": {
                     "$ref": "#/definitions/bunbig.Int"
-                },
-                "vm_exit_arg": {
-                    "type": "integer"
-                },
-                "vm_exit_code": {
-                    "type": "integer"
-                },
-                "vm_gas_credit": {
-                    "$ref": "#/definitions/bunbig.Int"
-                },
-                "vm_gas_limit": {
-                    "$ref": "#/definitions/bunbig.Int"
-                },
-                "vm_gas_used": {
-                    "$ref": "#/definitions/bunbig.Int"
-                },
-                "vm_mode": {
-                    "type": "integer"
-                },
-                "vm_steps": {
-                    "type": "integer"
                 }
             }
         },
